Cambio a menú scroll

--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
 <body>
     <header class="encabezado">
         <div class="contenedor-navegacion">
-            <div class="contenido-navegacion contenedor">
+            <div class="menu-fixed">
+                <div class="contenido-navegacion contenedor">
 
-                <div class="logo">
-                    <h2>CHIFA <span class="rojo">PON</span> <span class="verde">TU</span> </h2>
-                </div>
+                    <div class="logo">
+                        <h2>CHIFA <span class="rojo">PON</span> <span class="verde">TU</span> </h2>
+                    </div>
 
-                <nav class="navegacion ocultar">
-                    <a href="#">Iniciar Sesión</a>
-                    <a href="#">Inicio</a>
-                    <a href="#">Sobre Nosotros</a>
-                    <a href="#">Menú</a>
-                    <a href="#">Chef</a>
-                    <a href="#">Contacto</a>
+                    <nav class="navegacion ocultar">
+                        <a href="#">Iniciar Sesión</a>
+                        <a href="#">Inicio</a>
+                        <a href="#">Sobre Nosotros</a>
+                        <a href="#">Menú</a>
+                        <a href="#">Chef</a>
+                        <a href="#">Contacto</a>
 
 
-                </nav>
-                <div class="hamburguesa">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    
+                    </nav>
+                    <div class="hamburguesa">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        
+                    </div>
                 </div>
             </div>
         </div>
@@ -318,7 +320,7 @@
             </div>
             <div class="info">
                 <h3>Noticias</h3>
-                <p>Visitanos</p>
+                <p>¡Visitanos!</p>
                 <input type="email" placeholder="Tu correo">
                 <input type="submit" class="btn btn-azul" value="Suscribirse">
             </div>
