Carta pdf agregada

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="contenedor-encabezado">
                     <div class="texto-encabezado">
                         <h2>Welcome</h2>
-                        <a class="btn borders" href="#">Nuestro Menú</a>
+                        <a download="Carta de Pon tu" class="btn borders" href="/assets/pdf/Pon_Tu.pdf">Nuestro Menú</a>
                     </div>
                     <video autoplay loop muted >
                         <source src="assets/video/chifa1.mp4">
