--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="assets/icon/icon.png">
 </head>
 <body>
-    <header class="encabezado">
+    <header class="encabezado" id="inicio">
         <div class="contenedor-navegacion">
             <div class="menu-fixed">
                 <div class="contenido-navegacion contenedor">
@@ -22,12 +22,12 @@
                     </div>
 
                     <nav class="navegacion ocultar">
-                        <a href="#">Iniciar Sesión</a>
-                        <a href="#">Inicio</a>
-                        <a href="#">Sobre Nosotros</a>
-                        <a href="#">Menú</a>
-                        <a href="#">Chef</a>
-                        <a href="#">Contacto</a>
+                        <a href="#inicio">Inicio</a>
+                        <a href="#nosotros">Sobre Nosotros</a>
+                        <a href="#menu">Menú</a>
+                        <a href="#chef">Chef</a>
+                        <a href="#contacto">Contacto</a>
+                        <a id="login" href="#">Iniciar Sesión</a>
 
 
                     </nav>
@@ -46,7 +46,7 @@
                 <div class="contenedor-encabezado">
                     <div class="texto-encabezado">
                         <h2>Welcome</h2>
-                        <a class="btn borders" href="#">Nuestro Menú</a>
+                        <a class="btn borders" href="/assets/pdf/Pon_Tu.pdf" download="Carta de Chifa Pon Tu">Nuestro Menú</a>
                     </div>
                     <video autoplay loop muted>
                         <source src="assets/video/chifa1.mp4">
@@ -56,7 +56,7 @@
         </div>
     </header>
 
-    <div class="contenedor-nosotros contenedor">
+    <div class="contenedor-nosotros contenedor" id="nosotros">
         <div class="texto-nosotros">
             <p class="bienvenido">Bienvenido</p>
             <h1>Chifa Pon Tu</h1>
@@ -68,7 +68,7 @@
                 a nivel de Comas; por la misma razón llegan clientes en abundancia día tras día de diferentes 
                 lugares de la capital a degustar su inigualable sazón.</p>
 
-            <a href="#" class="btn btn-rojo">Contactar</a>
+            <a href="/html/nosotros.html" class="btn btn-rojo">Saber mas</a>
         </div>
         <div class="imagenes-nosotros">
             <div class="imagen1">
@@ -81,7 +81,7 @@
         </div>
     </div>
 
-    <section class="menu contenedor">
+    <section class="menu contenedor" id="menu">
         <h2 class="texto-platillos">Platillos Principales</h2>
         <!-- <div class="botones-platillos">
             <button class="todos btn btn-azul">Todos</button>   cambio 
@@ -237,13 +237,12 @@
         </div>
     </div>
 
-    <section class="chef contenedor">
+    <section class="chef contenedor" id="chef">
        <h2>  Chef Principal  </h2>
         <div class="contenido-chef"> 
             <div class="texto-chef">
                 <h3>Comenzando a cocinar hace más de 20 años, Guido Alberto Lau Santiago aprendió con pasión el secreto de la cocina de Asia Oriental. </h3>
                 <p>Gracias a su ascendencia china que le inculcaron desde pequeño descubrió su pasión por la cocina, hoy en día es uno de los mejores restaurantes tanto en sabor, como en calidad. Es el responsable de la producción de alimentos, planificar los menús, manejo de presupuesto e incluso de la contratación y capacitación del personal de cocina. </p>
-                <a href="#" class="btn btn-azul">Leer biografía</a>  <!--cambio -->
             </div>
     
             <div class="imagen-chef">
@@ -252,7 +251,7 @@
         </div>
     </section>
 
-    <div class="formulario-contacto contenedor">
+    <div class="formulario-contacto contenedor" id="contacto">
         <div class="informacion-contacto">
             <h3>Contactanos</h3>
             <p><i class="bi bi-geo-alt-fill"></i> Av. Belaunde 249 Comas</p>
