Rutas reescritas (Bug no mostraba las subpagina)

--- a/html/nosotros.html
+++ b/html/nosotros.html
@@ -7,8 +7,8 @@
         <title>CHIFA PON TU</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com/%22%3E<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin><link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Mulish:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/css/normalize.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="icon" href="assets/icon/icon.png">
     </head>
     <body>
@@ -58,11 +58,11 @@
             </div>
             <div class="imagenes-nosotros">
                 <div class="imagen1">
-                    <img data-src="/assets/img/chicacomida.webp" alt="img1">
+                    <img data-src="../assets/img/chicacomida.webp" alt="img1">
                 </div>
                 <div class="imagenes2">
-                    <img data-src="/assets/img/chaufacomida_bienvenido.webp" alt="img2">
-                    <img data-src="/assets/img/tallarinsaltadocomida.webp" alt="img3">
+                    <img data-src="../assets/img/chaufacomida_bienvenido.webp" alt="img2">
+                    <img data-src="../assets/img/tallarinsaltadocomida.webp" alt="img3">
                 </div>
             </div>
         </div>
@@ -103,7 +103,7 @@
                     </div>
 
                     <picture class="misionVision___img">
-                        <img data-src="/assets/svg/mision.svg" alt="Mision">
+                        <img data-src="../assets/svg/mision.svg" alt="Mision">
                     </picture>
                 </article>
 
@@ -115,7 +115,7 @@
                     </div>
 
                     <picture class="misionVision___img misionVision___img--revez"> 
-                        <img data-src="/assets/svg/vision.svg" alt="Vision">
+                        <img data-src="../assets/svg/vision.svg" alt="Vision">
                     </picture>
                 </article>
             </div>
